--- a/documentation/modules/ROOT/pages/4-6-daemonset.adoc
+++ b/documentation/modules/ROOT/pages/4-6-daemonset.adoc
@@ -30,7 +30,7 @@ cat <<EOF | oc create -f -
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: quarkus-daemonset
+  name: quarkus-daemonset-%userid%
   labels:
     app: quarkus-daemonset
 spec:
@@ -59,8 +59,8 @@ oc get pods -o wide
 [source,bash]
 ----
 NAME                      READY   STATUS    RESTARTS   AGE   IP           NODE            NOMINATED NODE   READINESS GATES
-quarkus-daemonset-jl2t5   1/1     Running   0          23s   10.244.0.2   multinode       <none>           <none>
-quarkus-daemonset-r64ql   1/1     Running   0          23s   10.244.1.2   multinode-m02   <none>           <none>
+quarkus-daemonset-%userid%-jl2t5   1/1     Running   0          23s   10.244.0.2   multinode       <none>           <none>
+quarkus-daemonset-%userid%-r64ql   1/1     Running   0          23s   10.244.1.2   multinode-m02   <none>           <none>
 ----
 
 Quarkus Pod의 인스턴스가 모든 노드에 배포됩니다.
@@ -72,5 +72,5 @@ Quarkus Pod의 인스턴스가 모든 노드에 배포됩니다.
 [.console-input]
 [source,bash,subs="+macros,+attributes"]
 ----
-oc delete daemonset quarkus-daemonset
+oc delete daemonset quarkus-daemonset-%userid%
 ----
